# NetLab

./: .gitignore  .pre-commit-config.yaml  Makefile  metrics.md  pyproject.toml
.github/workflows/: python-test.yml
dev/: run-checks.sh  setup-dev.sh
lib/: failure_policies.yml  workflows.yml
metrics/: bac.py  costpower.py  iterops.py  plot_bac_delta_vs_baseline.py  plot_cross_seed_bac.py  plot_cross_seed_iterops.py  plot_cross_seed_latency.py  plot_significance_heatmap.py  sps.py  summary.py
netlab/: __init__.py  cli.py  log_config.py  metrics_cmd.py
tests/: test_cli_subcommands.py  test_cli_summary_smoke.py  test_integration_real_metrics.py  test_iterops.py
tests/data/scenarios/_run_summaries/: _overall_ngraph_time.tsv  small_baseline.tsv  small_clos.tsv  small_dragonfly.tsv  small_dragonfly_custom.tsv
tests/data/scenarios/small_baseline/small_baseline/: small_baseline_network_graph.json  small_baseline_scenario.yml
tests/data/scenarios/small_baseline/small_baseline__seed11/: small_baseline__seed11_scenario.yml
tests/data/scenarios/small_baseline/small_baseline__seed12/: small_baseline__seed12_scenario.yml
tests/data/scenarios/small_clos/small_clos/: small_clos_network_graph.json  small_clos_scenario.yml
tests/data/scenarios/small_clos/small_clos__seed11/: small_clos__seed11_scenario.yml
tests/data/scenarios/small_clos/small_clos__seed12/: small_clos__seed12_scenario.yml
tests/data/scenarios_metrics/: project.csv  project_baseline_normalized.csv  summary.txt
tests/data/scenarios_metrics/small_baseline/: bac_summary.json  costpower_summary.csv  iterops_summary.csv  latency_summary.csv  network_stats_summary.csv  provenance.json
tests/data/scenarios_metrics/small_baseline/seed11/: bac.json  iterops.json  (+2 more)
tests/data/scenarios_metrics/small_clos/: bac_summary.json  costpower_summary.csv  iterops_summary.csv  latency_summary.csv  network_stats_summary.csv  provenance.json
tests/data/scenarios_metrics/small_dragonfly/: alpha_summary.json  bac_summary.json  costpower_summary.csv  iterops_summary.csv  latency_summary.csv  network_stats_summary.csv  provenance.json
tests/data/scenarios_metrics/small_dragonfly_custom/: bac_summary.json  costpower_summary.csv  iterops_summary.csv  latency_summary.csv  network_stats_summary.csv  provenance.json
tests/metrics/: test_plots_core.py  test_summary_module.py
topogen_configs/: Clos_L16_S4.yml  DragonFly_CustomG4.yml  Dragonfly_A3H2G7.yml  baseline_SingleRouter.yml
topogen_configs_small/: small_baseline.yml  small_clos.yml  small_dragonfly.yml  small_dragonfly_custom.yml
(+46 files in other folders)
